--- a/Hackwich3/Base.lproj/Main.storyboard
+++ b/Hackwich3/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Bh-vI-KgV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2306" y="154"/>
+            <point key="canvasLocation" x="2303" y="41"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="aZC-gT-Tdh">
@@ -44,43 +44,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNb-Oo-7Ze">
-                                <rect key="frame" x="39" y="274" width="47" height="21"/>
+                                <rect key="frame" x="39" y="274" width="99" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A23-z1-BdK">
-                                <rect key="frame" x="139" y="274" width="42" height="21"/>
+                                <rect key="frame" x="179" y="274" width="96" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NWv-CV-dZX">
-                                <rect key="frame" x="39" y="325" width="42" height="21"/>
+                                <rect key="frame" x="39" y="325" width="99" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mwL-ZS-3Gr">
-                                <rect key="frame" x="139" y="325" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mwL-ZS-3Gr">
+                                <rect key="frame" x="163" y="301" width="157" height="69"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dwz-d3-hjr">
-                                <rect key="frame" x="24" y="120" width="147" height="128"/>
+                                <rect key="frame" x="23" y="86" width="130" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Vk-4D-0Sa">
-                                <rect key="frame" x="226" y="152" width="64" height="56"/>
+                                <rect key="frame" x="185" y="124" width="112" height="105"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="YPc-Hd-URg">
-                                <rect key="frame" x="46" y="398" width="229" height="103"/>
+                                <rect key="frame" x="46" y="378" width="229" height="127"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -88,7 +88,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyM-wb-iDj">
-                                <rect key="frame" x="129" y="369" width="42" height="21"/>
+                                <rect key="frame" x="101" y="354" width="94" height="16"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -100,12 +100,19 @@
                     </view>
                     <navigationItem key="navigationItem" id="scM-2d-Xhc"/>
                     <connections>
+                        <outlet property="aboutMe" destination="fyM-wb-iDj" id="HZh-Sx-f5l"/>
                         <outlet property="firstLabel" destination="oNb-Oo-7Ze" id="SgM-ve-YVW"/>
+                        <outlet property="iMajored" destination="mwL-ZS-3Gr" id="tfq-jC-7M8"/>
+                        <outlet property="myLogo" destination="8Vk-4D-0Sa" id="eSq-yn-yKV"/>
+                        <outlet property="myMajor" destination="NWv-CV-dZX" id="Ads-QR-uow"/>
+                        <outlet property="myName" destination="A23-z1-BdK" id="hVz-8i-EOJ"/>
+                        <outlet property="myProfilePic" destination="dwz-d3-hjr" id="N7q-hS-5hU"/>
+                        <outlet property="paragraphAbout" destination="YPc-Hd-URg" id="vWD-d8-3li"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S4W-qq-6uH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2304" y="-758"/>
+            <point key="canvasLocation" x="2302.5" y="-758.45070422535207"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hbP-GK-gMY">
@@ -119,17 +126,18 @@
                     <connections>
                         <segue destination="FKe-HY-r4Q" kind="relationship" relationship="viewControllers" id="pG9-jb-lrG"/>
                         <segue destination="HXP-36-wFp" kind="relationship" relationship="viewControllers" id="ac3-hf-8nm"/>
+                        <segue destination="RBx-TX-Po1" kind="relationship" relationship="viewControllers" id="dnr-s1-av7"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UXt-0H-Sl0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-665" y="-317"/>
         </scene>
-        <!--Item 1-->
+        <!--About Me-->
         <scene sceneID="86h-AN-xVW">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FKe-HY-r4Q" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" image="about" id="txw-wT-gMg"/>
+                    <tabBarItem key="tabBarItem" title="About Me" image="about" id="txw-wT-gMg"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="z7Y-Ub-YeM">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -144,11 +152,11 @@
             </objects>
             <point key="canvasLocation" x="822" y="-758"/>
         </scene>
-        <!--Item 2-->
+        <!--Weather Converter-->
         <scene sceneID="IRg-dt-sek">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HXP-36-wFp" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 2" id="QYc-PO-CFL"/>
+                    <tabBarItem key="tabBarItem" title="Weather Converter" image="sun" id="QYc-PO-CFL"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jXP-xw-eeI">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -161,10 +169,71 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XRl-5S-pkp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="882" y="155"/>
+            <point key="canvasLocation" x="821" y="42"/>
+        </scene>
+        <!--Third View Controller-->
+        <scene sceneID="ptF-Bz-be2">
+            <objects>
+                <viewController id="ms7-xs-1RQ" customClass="thirdViewController" customModule="Hackwich3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kiB-LF-a1b">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SJG-NE-ZqW">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellReuselIdentifer" id="CsO-M0-Lgw">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CsO-M0-Lgw" id="Bsy-tg-LmR">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="ms7-xs-1RQ" id="hkb-0L-Nkc"/>
+                                    <outlet property="delegate" destination="ms7-xs-1RQ" id="4yx-OO-T0o"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="rb5-57-CZz"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gT8-lU-hG6"/>
+                    <connections>
+                        <outlet property="tableView" destination="SJG-NE-ZqW" id="RDe-jd-3XG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FfB-zL-Rvu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2302.5" y="919.0140845070423"/>
+        </scene>
+        <!--Bucket List-->
+        <scene sceneID="big-CN-efZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RBx-TX-Po1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Bucket List" image="list" id="fei-h4-jaA"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EtY-c0-7bZ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ms7-xs-1RQ" kind="relationship" relationship="rootViewController" id="1vm-Wl-xdB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fxu-bo-EYo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="819" y="919"/>
         </scene>
     </scenes>
     <resources>
         <image name="about" width="30" height="30"/>
+        <image name="list" width="30" height="30"/>
+        <image name="sun" width="30" height="30"/>
     </resources>
 </document>
