Not Done with Project 2

--- a/Hackwich3/Base.lproj/Main.storyboard
+++ b/Hackwich3/Base.lproj/Main.storyboard
@@ -10,16 +10,31 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--View Controller Two View Controller-->
         <scene sceneID="z7a-B5-ou9">
             <objects>
-                <viewController id="GgL-C7-ttj" sceneMemberID="viewController">
+                <viewController id="GgL-C7-ttj" customClass="ViewControllerTwoViewController" customModule="Hackwich3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EVS-qd-fyk">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zyg-q7-pOe">
+                                <rect key="frame" x="133" y="236" width="55" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Convert"/>
+                                <connections>
+                                    <action selector="setLabelButtonPressed:" destination="GgL-C7-ttj" eventType="touchUpInside" id="5iY-fz-I9h"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ozw-LW-fjd">
+                                <rect key="frame" x="58" y="181" width="204" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNz-b1-rdc">
-                                <rect key="frame" x="139" y="274" width="42" height="21"/>
+                                <rect key="frame" x="80" y="329" width="161" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -30,10 +45,14 @@
                         <viewLayoutGuide key="safeArea" id="zzU-U8-2nq"/>
                     </view>
                     <navigationItem key="navigationItem" id="09o-Q2-cbx"/>
+                    <connections>
+                        <outlet property="displayTextLabel" destination="hNz-b1-rdc" id="7mu-zq-O07"/>
+                        <outlet property="textField" destination="Ozw-LW-fjd" id="AeK-m4-dUR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Bh-vI-KgV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2303" y="41"/>
+            <point key="canvasLocation" x="2302.5" y="40.140845070422536"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="aZC-gT-Tdh">
